more pin-position features

--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -301,7 +301,7 @@
             </div>
 
 
-            <div id="pin"><i class="fa fa-thumb-tack fa-2x"></i></div>
+            <div id="pin" class="pin"><i class="fa fa-thumb-tack fa-2x"></i></div>
 
 
         </div>
