chevron on left

--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -147,7 +147,7 @@
             
             <!-- –––––––––––––––––––––––––– Toggle menu button –––––––––––––––––––––––––––––––––––––-->
                 <div class="toggle_menu">
-                    <a href="#0"><i class="fa fa-chevron-right"></i>
+                    <a href="#0"><i class="fa fa-chevron-left"></i>
                     </a>
                 </div>
 
