end of the day commit

--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -301,10 +301,12 @@
             </div>
 
 
-            <div id="pin" class="pin"><i class="fa fa-thumb-tack fa-2x"></i>
-                <form action="demo_form.asp">
-                    <input type="text" name="fname" >
-                    <input type="submit" value="Submit">
+            <div id="pin" class="pin">
+                <i class="fa fa-thumb-tack fa-2x"></i>
+                <form class="pin-form" action="">
+                    <!-- <i class="fa fa-tags"></i> -->
+                    <input class="pin-input" type="text" name="fname"  placeholder="Pin tag">
+                    <!-- <button href="#" class="save-pin">Save</button> -->
                 </form>
             </div>
 
