nav arrows, title scroll, pin

--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -219,8 +219,8 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a id="cite" data-toggle="collapse" data-parent="#accordion" href="#collapse3" title="Quote an excerpt easily" alt="Quote an excerpt easily"><i class="fa fa-quote-left"></i><i class="fa fa-paragraph"></i>
-                                Reference this</a>
+                            <a id="cite" data-toggle="collapse" data-parent="#accordion" href="#collapse3" title="Quote an excerpt easily" alt="Quote an excerpt easily"><i class="fa fa-quote-left"></i>
+                                Referencing tool</a>
                         </h4>
                     </div>
                     <div id="collapse3" class="panel-collapse collapse">
@@ -326,7 +326,7 @@
         <a href="files/TOD17-GrayZones.pdf" class="extra">.PDF</a> <a href="files/TOD17-GrayZones.epub" class="extra">.Epub</a> <a href="files/TOD17-GrayZones.md" class="extra">.Md</a>                
     </div>
 <!-- panel 2: Quote-->
-    <div id="panel2" class="hidden-lg hidden-md col-sm-6 col-xs-12">Reference this<br>
+    <div id="panel2" class="hidden-lg hidden-md col-sm-6 col-xs-12">Referencing tool<br>
         Want to cite a paragraph with properly formatted reference?<br>
         Select your text and its references will appear below:        <p title="Modern Language Association" alt="Modern Language Association">MLA</p>
         <button data-clipboard-target="#mla" class="full-citation" id="mla"></button>
@@ -393,8 +393,8 @@
         <i class="fa fa-download"></i> Download
     </div>
     <div id="flip2"  class="hidden-lg hidden-md hidden-ms col-xs-12">
-        <i class="fa fa-quote-left"></i><i class="fa fa-paragraph"></i>
-        Reference this
+        <i class="fa fa-quote-left"></i>
+        Referencing tool
     </div>
     <div id="flip3"  class="hidden-lg hidden-md hidden-ms col-xs-12">
         <i class="fa fa-print"></i> Print
@@ -491,9 +491,9 @@
     <div class="container-fluid">
         <div class="row">
             <div id="arrows" class="col-lg-1 col-md-1 col-lg-offset-9 col-md-offset-9 hidden-sm hidden-xs">
-                <a href="#" id="up" class="display"><i class="fa fa-long-arrow-up"></i>
+                <a href="#0" id="up" class="display"><i class="fa fa-long-arrow-up"></i>
                 </a><br>
-                <a href="#" id="down" class="display"><i class="fa fa-long-arrow-down"></i> </a>
+                <a href="#0" id="down" class="display"><i class="fa fa-long-arrow-down"></i> </a>
             </div>
         </div>
     </div>
