--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -164,6 +164,11 @@
     <div class="row">
         <div id="menu-right" class="col-lg-2 col-md-2 col-lg-offset-10 hidden-sm hidden-xs">
 
+            <div class="toggle_menu_right">
+                <a href="#0"><i class="fa fa-chevron-right"></i>
+                </a>
+            </div>
+
             <div class="panel-group" id="accordion">
                
                
