--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -165,8 +165,10 @@
         <div id="menu-right" class="col-lg-2 col-md-2 col-lg-offset-10 col-md-offset-10 hidden-sm hidden-xs">
 
             <div class="toggle_menu_right">
-                <a href="#0"><i class="fa fa-chevron-right"></i>
+                <div class="toggle_menu_right_button">Tools
+                <a href="#0">
                 </a>
+                </div>
             </div>
 
             <div id="menu-right-wrapper">
@@ -431,7 +433,7 @@
        
         <!-- –––––––––––––––––––––––––– Information box (top) –––––––––––––––––––––––––––––––––––––-->
         
-    <div id="info-box" class="toppy col-lg-12 col-md-6 col-sm-6 col-xs-10 col-lg-offset-0 col-md-offset-1 col-sm-offset-1 col-xs-offset-1" >
+    <div id="info-box" >
         <!-- LIBRARY TREE -->
         <div class="row" id="library-tree">
             <div id="breadcrumb" class="col-lg-8 col-md-6 col-sm-6 col-xs-10 col-lg-offset-0 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
