--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -150,8 +150,10 @@
             
             <!-- –––––––––––––––––––––––––– Toggle menu button –––––––––––––––––––––––––––––––––––––-->
                 <div class="toggle_menu">
-                    <a href="#0"><i class="fa fa-chevron-left"></i>
-                    </a>
+                    <div class="toggle_menu_left_button"><div>The Gray Zones of Creativity and Capital</div>
+                        <a href="#0">
+                        </a>
+                    </div>
                 </div>
 
         </div>
@@ -426,7 +428,6 @@
 <!-- –––––––––––––––––––––––––– Vertical scrolling indicator –––––––––––––––––––––––––––––––––––––-->
 <div id="menu_bar">
     <div id="menu_bar_scroll"></div>
-    <div id="menu_bar_title">The Gray Zones of Creativity and capital</div>
 </div>
 
 
