--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -239,17 +239,11 @@
         <div class="row">
             <div id="menu-right" class="col-lg-2 col-md-2 col-lg-offset-10 col-md-offset-10 hidden-sm hidden-xs">
 
-<!-- <<<<<<< Updated upstream -->
                 <div class="toggle_menu_right">
                     <div class="toggle_menu_right_button">
-                        <i class="fa fa-angle-left"></i>
+                        <i class="fa fa-angle-down"></i>
                         <a href="#0"></a>
-    <!-- =======
-                    <div class="toggle_menu_right">
-                        <div class="toggle_menu_right_button">Tools
-                        <a href="#0"></a>
-                        </div>
-    >>>>>>> Stashed changes -->
+
                     </div>
                 </div>
 
