enough for tonight

--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -501,23 +501,22 @@
 
 <!--––––––––––––––––––––––––––––––– buttons –––––––––––––––––––––––––––––––-->
         <div id="flip"  class="hidden-lg hidden-md hidden-ms col-xs-12">
-            <i class="fa fa-download"></i> Download
+            <i class="fa fa-download"></i>
         </div>
         <div id="flip2"  class="hidden-lg hidden-md hidden-ms col-xs-12">
             <i class="fa fa-quote-left"></i>
-            Referencing tool
         </div>
         <div id="flip3"  class="hidden-lg hidden-md hidden-ms col-xs-12">
-            <i class="fa fa-print"></i> Print
+            <i class="fa fa-print"></i>
         </div>
         <div id="flip4"  class="hidden-lg hidden-md hidden-ms col-xs-12">
-            <i class="fa fa-wrench"></i> Settings
+            <i class="fa fa-wrench"></i>
         </div>
         <div id="flip5"  class="hidden-lg hidden-md hidden-ms col-xs-12">
-            <i class="fa fa-external-link"></i> Share
+            <i class="fa fa-external-link"></i>
         </div>
         <div id="flip6" class="hidden-lg hidden-md hidden-ms col-xs-12">
-            <i class="fa fa-external-link"></i> Search
+            <i class="fa fa-external-link"></i>
         </div>
     </div> <!-- #menu-right-xs --> 
 
@@ -648,7 +647,7 @@ before
     <!-- –––––––––––––––––––––––––– Arrows for LG,MD devices (right) –––––––––––––––––––––––––––––––––––––-->
     <div class="container-fluid">
         <div class="row">
-            <div id="arrows" class="col-lg-1 col-md-1 col-lg-offset-9 col-md-offset-9 hidden-sm hidden-xs">
+            <div id="arrows" class="col-lg-1 col-md-1 col-lg-offset-9 col-md-offset-9 col-sm-offset-11 col-xs-offset-11 col-sm-1 col-xs-1">
                 <a href="#0" id="up" class="display"><i class="fa fa-angle-up"></i></a>
                 <br>
                 <a href="#0" id="down" class="display"><i class="fa fa-angle-down"></i></a>
@@ -669,7 +668,7 @@ before
             <div id="par_numbr" class="col-lg-1 col-md-1 col-sm-1 col-xs-offset-0 col-xs-1" style="z-index:-999;"></div>
 
     <!--––––––––––––––––––––––––––– #CONTENT –––––––––––––––––––––––––––-->
-            <div id="content" class="col-lg-5 col-lg-offset-1 col-md-6 col-sm-8 col-sm-offset-1 col-xs-offset-0 col-xs-11">
+            <div id="content" class="col-lg-5 col-lg-offset-1 col-md-6 col-sm-8 col-sm-offset-1 col-xs-offset-0 col-xs-12">
 
     <!--––––––––––––––––––––––––––– SELECTION MENU #ASD –––––––––––––––––––––––––––-->
                 <div class="container on-selection" id="asd">
