keyword toggle all

--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -353,7 +353,7 @@
                                     <span id="button_fontsizeminus" class="extra-btn" value="smaller"><i class="fa fa-font"></i>-</span>
                                     <span id="button_fontsizeplus" class="extra-btn" value="larger"><i class="fa fa-font"></i>+</span>
                                     <hr>
-                                    <span id="keyword-show-all" class="extra-btn">Display keywords <i class="fa fa-tags"></i></span>
+                                    <span type="button" id="keyword-show-all" class="extra-btn">Display keywords <i class="fa fa-tags"></i></span>
                                     <hr>
                                     <span id="highlight-show-all" class="extra-btn">Display highlight <i class="fa fa-pencil"></i></span>
                                     <span id="highlight-remove" class="extra-btn">Remove highlight <i class="fa fa-eraser"></i></span>
@@ -444,7 +444,7 @@
             <span id="button_fontsizeplus_xs" class="extra-btn" value="larger"><i class="fa fa-font"></i>+</span>
 
             <hr>
-            <span id="keyword-show-all_xs" class="extra-btn">Display keywords <i class="fa fa-tags"></i></span>
+            <span type="button" id="keyword-show-all_xs" class="extra-btn">Display keywords <i class="fa fa-tags"></i></span>
 
             </div>
             <div class="panel_container hidden-lg hidden-md col-sm-4 col-xs-6">
