word/character/time counts, menus fixed, search, keyword and highlight toggles etc

--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -87,6 +87,7 @@
 <div class="container-fluid">
     <div class="row">
         <div id="menu" class="not col-lg-2 col-md-2 col-sm-2 col-xs-11 ">
+            <div id="menu-left-close">X</div>
             <div id="toc_wrapper">
                 <p class="menu-publication-title">The Gray Zones of Creativity and Capital</p>
                 <a class="page-scroll" href="#chapter1">
@@ -240,6 +241,7 @@
     <div class="container-fluid">
         <div class="row">
             <div id="menu-right" class="col-lg-2 col-md-2 col-lg-offset-10 col-md-offset-10 hidden-sm hidden-xs">
+                <div id="menu-right-close">X</div>
 
                 <div class="toggle_menu_right">
                     <div class="toggle_menu_right_button">
@@ -353,12 +355,13 @@
                                     <span id="button_fontsizeminus" class="extra-btn" value="smaller"><i class="fa fa-font"></i>-</span>
                                     <span id="button_fontsizeplus" class="extra-btn" value="larger"><i class="fa fa-font"></i>+</span>
                                     <hr>
-                                    <span type="button" id="keyword-show-all" class="extra-btn">Display keywords <i class="fa fa-tags"></i></span>
+                                    <span type="button" id="keyword-show-all" class="extra-btn">Show all keywords <i class="fa fa-tags"></i></span>
+                                    <span type="button" id="keyword-hide-all" class="extra-btn">Hide all keywords <i class="fa fa-tags"></i></span>
                                     <hr>
-                                    <span id="highlight-show-all" class="extra-btn">Display highlight <i class="fa fa-pencil"></i></span>
-                                    <span id="highlight-remove" class="extra-btn">Remove highlight <i class="fa fa-eraser"></i></span>
+                                    <span id="highlight-hide-show-all" class="extra-btn">Hide/Show highlight <i class="fa fa-pencil"></i></span>
+                                    <!-- <span id="highlight-remove" class="extra-btn">Remove highlight <i class="fa fa-eraser"></i></span> -->
                                     <hr>
-                                    <span id="bookmark" class="extra-btn"><i class="fa fa-thumb-tack"></i> Save reading position</span>
+                                    <span id="delete-pins" class="extra-btn"><i class="fa fa-thumb-tack"></i> Save reading position</span>
                                 </div>
                             </div>
                         </div>
@@ -707,7 +710,7 @@ by Kiliano Foearun & Coolio Andthegang
             <div id="par_numbr" class="col-lg-1 col-md-1 col-sm-1 col-xs-offset-0 col-xs-1" style="z-index:-999;"></div>
 
     <!--––––––––––––––––––––––––––– #CONTENT –––––––––––––––––––––––––––-->
-            <div id="content" class="col-lg-6 col-lg-offset-1 col-md-6 col-sm-8 col-sm-offset-1 col-xs-offset-0 col-xs-12">
+            <div id="content" class="col-lg-6 col-lg-offset-0 col-md-offset-0 col-md-6 col-sm-8 col-sm-offset-0 col-xs-offset-0 col-xs-12">
 
     <!--––––––––––––––––––––––––––– SELECTION MENU #ASD –––––––––––––––––––––––––––-->
                 <div class="container on-selection" id="asd">
@@ -728,7 +731,9 @@ by Kiliano Foearun & Coolio Andthegang
                 <h2>The Gray Zones of Creativity and Capital: Introduction</h2>
 
                 <span class="author">Šefik Tatlić &amp; Gordana Nikolić</span>
-                <span class="words"> | 1.666 words</span>
+                <span class="words"></span>
+                <span class="characterss"></span>
+                <span class="timee"></span>
                 <br>
                 <br>
                 <div class="keyword-toggle">
@@ -767,7 +772,9 @@ by Kiliano Foearun & Coolio Andthegang
             <div class="section" id="chapter2" data-authorName="Jonathan" data-authorLastName="Beller" data-article="Within the Image">
             	<h2>Within the Image</h2>
             	<span class="author">Jonathan Beller</span>
-                <span class="words"> | 5.407 words</span>
+                <span class="words"></span>
+                <span class="characterss"></span>
+                <span class="timee"></span>
                 <br>
                 <br>
                 <div class="keyword-toggle">
@@ -858,7 +865,9 @@ by Kiliano Foearun & Coolio Andthegang
         		<h2>Neutralizing Engaged Subjects in the Creative City</h2>
         		
                 <span class="author">Josephine Berry Slater</span>
-                <span class="words"> | 6.879 words</span>
+                <span class="words"></span>
+                <span class="characterss"></span>
+                <span class="timee"></span>
                 <br>
                 <br>
 
@@ -957,7 +966,9 @@ by Kiliano Foearun & Coolio Andthegang
             <div class="section" id="chapter4" data-authorName="Marc James" data-authorLastName="Léger" data-article="The Agency of Art in the Unconscious">
     			<h2>The agency of art in the unconscious</h2>
     			<span class="author">Marc James Léger</span>
-                <span class="words"> | 4.467 words</span>
+                <span class="words"></span>
+                <span class="characterss"></span>
+                <span class="timee"></span>
                 <br>
                 <br>
                 <div class="keyword-toggle">
@@ -1032,7 +1043,9 @@ by Kiliano Foearun & Coolio Andthegang
             <div class="section" id="chapter5" data-authorName="Ana" data-authorLastName="Vilenica" data-article="The Art of new class geography of the city — Culture-guided urban regeneration serving the Modernization of the periphery">
     			<h2>The Art of New Class Geography of the City — Culture-guided Urban Regeneration Serving the <em>Modernization</em> of the Periphery</h2>
     			<span class="author">Ana Vilenica</span>
-                <span class="words"> | 5.090 words</span>
+                <span class="words"></span>
+                <span class="characterss"></span>
+                <span class="timee"></span>
                 <br>
                 <br>
                 <div class="keyword-toggle">
@@ -1138,7 +1151,9 @@ by Kiliano Foearun & Coolio Andthegang
             <div class="section" id="chapter6" data-authorName="Sandi" data-authorLastName="Abram" data-article="The creative factory: Collective creativity and autonomy in the neoliberal machine of creative industries">
 				<h2>The Creative Factory: Collective creativity and Autonomy in the Neoliberal Machine of Creative Industries</h2>
 				<span class="author">Sandi Abram</span>
-                <span class="words"> | 3.573 words</span>
+                <span class="words"></span>
+                <span class="characterss"></span>
+                <span class="timee"></span>
                 <br>
                 <br>
                 <div class="keyword-toggle">
@@ -1247,7 +1262,9 @@ by Kiliano Foearun & Coolio Andthegang
             <div class="section" id="chapter7" data-authorName="Irmgard" data-authorLastName="Emmelheinz" data-article="Neoliberalism and the Autonomy of Art: the Culture of Power, the Power of Culture">
     			<h2>Neoliberalism and the Autonomy of Art: the Culture of Power, the Power of Culture<a class="footnoteRef" href="#fn152" id="fnref152"><sup>152</sup></a></h2>
                 <span class="author">Irmgard Emmelheinz</span>
-                <span class="words"> | 4.135 words</span>
+                <span class="words"></span>
+                <span class="characterss"></span>
+                <span class="timee"></span>
                 <br>
                 <br>
                 <div class="keyword-toggle">
