--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -87,8 +87,11 @@
 <div class="container-fluid">
     <div class="row">
         <div id="menu" class="not col-lg-2 col-md-2 col-sm-2 col-xs-11 ">
-            <div id="menu-left-close">X</div>
             <div id="toc_wrapper">
+                <div id="menu-left-close">
+                    <i class="fa fa-chevron-left"></i>
+                </div>
+
                 <p class="menu-publication-title">The Gray Zones of Creativity and Capital</p>
                 <a class="page-scroll" href="#chapter1">
                     <h2>
@@ -545,7 +548,7 @@
                 <!-- LIBRARY TREE -->
 
                 <div class="row" id="library-tree">
-                    <div class="col-lg-10 col-md-10 col-sm-6 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 hidden-xs" id="breadcrumb">
+                    <div class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-1 hidden-sm hidden-xs" id="breadcrumb">
                         <ol class="breadcrumb">
                             <li>
                                 <a href="#">INC Library</a>
@@ -560,6 +563,10 @@
                             </li>
                         </ol>
                     </div>
+                    <div class="breadcrumb hidden-lg hidden-md col-sm-12 col-xs-12">
+                        <a href="#"><i class="fa fa-arrow-left"></i>
+                             INC Library</a>
+                    </div>
                 </div>
 
                 
@@ -573,7 +580,7 @@
                 <div class="row" id="book-title-box">
                     <!-- BOOK TITLE -->
 
-                    <div class="col-lg-6 col-md-8 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-2 col-sm-offset-2 col-xs-offset-0" id="book-title">
+                    <div class="col-lg-6 col-md-8 col-sm-8 col-xs-11 col-lg-offset-3 col-md-offset-2 col-sm-offset-2 col-xs-offset-0" id="book-title">
                         N°17: The Gray Zones of Creativity and Capital
                     </div>
 
@@ -585,7 +592,7 @@
 
                 <div class="row">
                     <div class="info-box-left col-lg-6 col-md-6 col-sm-6 col-xs-10">
-                        <div class="col-lg-offset-2 col-md-offset-1 col-sm-offset-1 col-xs-offset-1" id="info-box-left-img-container">
+                        <div class="col-lg-offset-2 col-md-offset-1 col-sm-offset-1 col-xs-offset-0" id="info-box-left-img-container">
                             <!-- <img class="img-responsive" src="http://image.issuu.com/150402121056-510d1f3c2060fd382ba9f86be83c1ec6/jpg/page_1.jpg"> -->
                             <img class="img-responsive" src='cover.jpg'>                 
                         </div>
@@ -653,6 +660,8 @@ by Kiliano Foearun & Coolio Andthegang
                             <div class="carousel-inner">
                                 <div class="item active">
                                     <div class="row">
+                                        <div class="col-lg-offset-1 col-md-offset-1 col-sm-offset-0 col-xs-offset-0 info-box-column-header">See also</div>
+                                       
                                         <div class="carousel-content col-lg-2 col-md-2 col-sm-3">
                                             <a href="#x">
                                             <img src="http://image.issuu.com/140620081426-d28c76a78a8c783d177b44bb96b1c82b/jpg/page_1_thumb_large.jpg" alt="Image" class="img-responsive">
