--- a/last2weeks/15-01-Post-GrayZones.html
+++ b/last2weeks/15-01-Post-GrayZones.html
@@ -728,12 +728,12 @@ by Kiliano Foearun & Coolio Andthegang
     <!--––––––––––––––––––––––––––– SELECTION MENU #ASD –––––––––––––––––––––––––––-->
                 <div class="container on-selection" id="asd">
                     <div class="btn-group-vertical">
-                        <button id="lookup" type="button" class="btn btn-primary"><i class="fa fa-book"></i>Define</button>
-                        <div class="btn-group-horizontal">
-                            <button type="button" id="highlight" class="btn btn-primary"><i class="fa fa-pencil"></i>Highlight</button>
-                            <button type="button" id="erase" class="btn btn-primary"><i class="fa fa-eraser"></i> Unhighlight</button>
-                        </div>
-                        <button type="button" id="get-reference" class="btn btn-primary"><i class="fa fa-quote-left"></i>Reference this</button>
+                        <button id="lookup" type="button" class="btn btn-primary"><i class="fa fa-book"></i> Define</button>
+                        <!-- <div class="btn-group-horizontal"> -->
+                        <button type="button" id="highlight" class="btn btn-primary"><i class="fa fa-pencil"></i> Highlight</button>
+                        <button type="button" id="erase" class="btn btn-primary"><i class="fa fa-eraser"></i> Unhighlight</button>
+                        <!-- </div> -->
+                        <button type="button" id="get-reference" class="btn btn-primary"><i class="fa fa-quote-left"></i> Reference this</button>
                     </div>
                 </div>
 
